# ironfish

ironfish/: package.json
ironfish-cli/: package.json
ironfish-cli/src/commands/: dupes.ts  start.ts
ironfish-cli/src/commands/accounts/: transactions.ts
ironfish-rust/: Cargo.toml
ironfish-rust-nodejs/: Cargo.toml  index.d.ts  index.js  package.json
ironfish-rust-nodejs/src/: nacl.rs
ironfish-rust/src/: lib.rs  nacl.rs
ironfish-rust/src/primitives/: sapling.rs
ironfish-rust/src/proofs/circuit/: mint_asset.rs
ironfish-rust/src/proofs/notes/: minting_asset.rs
ironfish/src/: node.ts  playground.ts
ironfish/src/blockchain/: blockchain.ts
ironfish/src/fileStores/: config.ts
ironfish/src/merkletree/: merkletree.test.ts
ironfish/src/network/: peerNetwork.ts
ironfish/src/rpc/routes/accounts/: getTransactions.ts  utils.ts
ironfish/src/tests/: playground.test.ts
ironfish/src/utils/: bench.ts
ironfish/src/wallet/: account.test.ts  account.ts  accounts.test.ts  wallet.ts
ironfish/src/wallet/__fixtures__/: accounts.test.ts.fixture
